src/styles/pages/_assistance-listing-operations.scss
.assistance-listing-operations{

  .usa-alert{
    width: 100%;
  }

  .usa-form-hint{
    max-width: 46rem;
    display: block;
  }

  .sam-list-input .label-wrapper{
    max-width: 480px;
  }

  .sticky-label{
    color: #a6a6a6;
    letter-spacing: -0.3px;
    font-size: 1.6rem;
  }

  .disabled{
    color: #aeb0b5
  }

  legend{
    font-size: 1.7rem;
    font-weight: 400;
    margin-bottom: 1em;
  }
}

